2006-12-21  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/csharp.lang,
	gtksourceview/language-specs/css.lang,
	gtksourceview/language-specs/php.lang,
	gtksourceview/language-specs/sql.lang:
	Corrected broken /**/ comments.
	* gtksourceview/language-specs/scheme.lang:
	Do not use def:preprocessor style here.
	* gtksourceview/language-specs/def.lang,
	gtksourceview/language-specs/gvim.styles:
	Temporarily added back "def:preprocessor" style.
	* gtksourceview/language-specs/desktop.lang,
	gtksourceview/language-specs/m4.lang,
	gtksourceview/language-specs/sh.lang:
	Better highlighting.

2006-12-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/ada.lang,
	gtksourceview/language-specs/csharp.lang,
	gtksourceview/language-specs/css.lang,
	gtksourceview/language-specs/desktop.lang,
	gtksourceview/language-specs/fortran.lang,
	gtksourceview/language-specs/gtkrc.lang,
	gtksourceview/language-specs/haskell.lang,
	gtksourceview/language-specs/idl.lang,
	gtksourceview/language-specs/ini.lang,
	gtksourceview/language-specs/java.lang,
	gtksourceview/language-specs/octave.lang,
	gtksourceview/language-specs/pascal.lang,
	gtksourceview/language-specs/php.lang,
	gtksourceview/language-specs/po.lang,
	gtksourceview/language-specs/ruby.lang,
	gtksourceview/language-specs/scheme.lang,
	gtksourceview/language-specs/sql.lang,
	gtksourceview/language-specs/tcl.lang,
	gtksourceview/language-specs/texinfo.lang:
	Converted to new format.
	* gtksourceview/language-specs/check.sh:
	added conevrted files.
	* gtksourceview/language-specs/convert.py:
	output "_name" attribute for styles; do not insert "\b"
	keyword suffixes and prefixes.

2006-12-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/desktop.lang,
	gtksourceview/language-specs/fortran.lang,
	gtksourceview/language-specs/java.lang,
	gtksourceview/language-specs/nemerle.lang,
	gtksourceview/language-specs/pascal.lang,
	gtksourceview/language-specs/php.lang,